--- a/selectMosque/scss/custome.css
+++ b/selectMosque/scss/custome.css
@@ -36,19 +36,23 @@ header .row {
   text-align: center;
 }
 
-header .row #autoPlay {
-  font-size: 0.8rem;
-  margin-left: 1rem;
-  display: block;
-}
-
 header .row .main {
   margin-top: 50%;
 }
 
+header .row .main #autoPlay {
+  font-size: 0.8rem;
+  margin-left: 1rem;
+}
+
+header .row .main i {
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
 header .row #time {
   text-align: center;
-  font-size: calc(9vw);
+  font-size: calc(10vw);
   font-family: Impact;
   letter-spacing: 0.3rem;
 }
@@ -331,6 +335,7 @@ footer .text marquee {
   header i {
     font-size: 3vw !important;
     margin-bottom: 1rem;
+    cursor: pointer;
   }
   header #main {
     font-size: 2vw !important;
@@ -357,7 +362,7 @@ footer .text marquee {
     min-height: 70vh;
   }
   #sec-11e4 td, #sec-11e4 th {
-    font-size: 2vw !important;
+    font-size: 2.3vw !important;
   }
   #sec-11e4 .slideshow-container {
     min-height: 23vw !important;
