--- a/selectMosque/scss/custome.scss
+++ b/selectMosque/scss/custome.scss
@@ -34,20 +34,27 @@ header{
         margin-right: -4rem;
         padding: 0% !important;
         text-align: center;
-        #autoPlay{
-            font-size: 0.8rem;
-            margin-left: 1rem;
-            display: block;
-        }
+       
       
         .main{
             margin-top: 50%;
+          
+            #autoPlay{
+                font-size: 0.8rem;
+                margin-left: 1rem;
+               
+            }
+            i{
+                font-size: 2.5rem;
+                cursor: pointer;
+              
+            }
             
            
         }
         #time{
             text-align: center;
-            font-size: calc(9vw);
+            font-size: calc(10vw);
             font-family: Impact;
             letter-spacing: 0.3rem;
             
@@ -319,6 +326,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
         i{
             font-size: 3vw !important;
             margin-bottom: 1rem;
+            cursor: pointer;
         }
         #main{
             font-size: 2vw !important;
@@ -352,7 +360,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
        min-height: 70vh;
         
         td,th{
-            font-size: 2vw !important;
+            font-size: 2.3vw !important;
         }
         .slideshow-container{
             min-height: 23vw !important;
